# cmph

./: .nohap.json  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  cmph.pc.in  cmph.spec  config.h.in  configure  configure.ac  cxxmph.pc.in  groups  libtool  project.config
cxxmph/: Makefile.am  Makefile.in  benchmark.cc  benchmark.h  bm_common.cc  bm_common.h  bm_map.cc  cxxmph.cc  dense_hash_map_test.cc  hollow_iterator.h  hollow_iterator_test.cc  map_tester.cc  map_tester.h  map_tester_test.cc  mph_bits.cc  mph_bits.h  mph_bits_test.cc  mph_index.cc  mph_index.h  mph_index_test.cc  mph_map.h  mph_map_test.cc  seeded_hash.h  seeded_hash_test.cc  string_util.cc  string_util.h  string_util_test.cc  stringpiece.h  test.cc  test.h  test_test.cc  trigraph.cc  trigraph.h  trigraph_test.cc
examples/: Makefile.am  Makefile.in  file_adapter_ex2.c  struct_vector_adapter_ex3.c  vector_adapter_ex1.c
man/: Makefile.am  Makefile.in  cmph.1
src/: Makefile.am  Makefile.in  bdz.c  bdz_ph.c  bm_numbers.c  bmz.c  bmz8.c  brz.c  chd.c  chd_ph.c  chm.c  cmph.c  cmph_benchmark.c  cmph_benchmark.h  cmph_structs.c  fch.c  linear_string_map.c  linear_string_map.h  main.c
tests/: Makefile.am  Makefile.in  cmph_benchmark_test.c  compressed_rank_tests.c  compressed_seq_tests.c  graph_tests.c  mphf_tests.c  packed_mphf_tests.c  select_tests.c
